fixed high scores pages connecting to database issue

--- a/client/src/pages/home.css
+++ b/client/src/pages/home.css
@@ -106,8 +106,8 @@ h2 {
 }
 
 .bg-dark {
-    /* background-image: linear-gradient(to left, #67aeca, #9066d3); */
-    background-image: linear-gradient(to right, #ec5d92, #5f0f4e );
+    background-image: linear-gradient(to left, #67aeca, #9066d3);
+    /* background-image: linear-gradient(to right, #ec5d92, #5f0f4e ); */
 }
 
 .bubbles {
