--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,6 +28,11 @@
   color: #61dafb;
 }
 
+#pauseBtn{
+  margin: 15px;
+  display: block;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
